--- a/index.html
+++ b/index.html
@@ -3,32 +3,16 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Exibir Data Atual</title>
+<title>Data Atual</title>
 </head>
 <body>
-
-<h1>Data Atual:</h1>
-<p id="dataAtual"></p>
-
 <script>
-// Função para obter a data atual
-function getDataAtual() {
-    var data = new Date();
-    var dia = data.getDate();
-    var mes = data.getMonth() + 1; // O mês é baseado em zero
-    var ano = data.getFullYear();
-
-    // Formata a data como "dia/mês/ano"
-    var dataFormatada = dia + '/' + mes + '/' + ano;
-
-    return dataFormatada;
-}
-
-// Obtém a referência ao elemento onde a data será exibida
-var elementoDataAtual = document.getElementById('dataAtual');
-
-// Define o conteúdo desse elemento como a data atual
-elementoDataAtual.textContent = getDataAtual();
+var dataAtual = new Date();
+var dia = dataAtual.getDate();
+var mes = dataAtual.getMonth() + 1;
+var ano = dataAtual.getFullYear();
+var dataFormatada = dia + '/' + mes + '/' + ano;
+document.write(dataFormatada);
 </script>
 
 </body>
